# code-scout

./: .env.notarize  .npmrc  AuthKey_RH3SNF475B.p8  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
.claude/: launch.json  settings.local.json
.codescout/: context.md  project.json  skills.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
docs/: GITHUB_ACTIONS.md
scripts/: build-macos-bundle.sh  build-signed-notarized.sh  bump-app-version.mjs  generate-app-icon.mjs  pack-mac-updater-artifact.sh  publish-mac-downloads.sh  release-mac.sh  release-version.sh  smoke-bridge-apis.mjs
scripts/migrations/: codescout_waitlist.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: scout-stt-aarch64-apple-darwin  scout-stt-x86_64-apple-darwin
src-tauri/browser-agent/: browser-agent.js  package-lock.json  package.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  updater.rs
src-tauri/swift/: scout-stt.swift
src/components/: AppMessageBanner.tsx  CodeScoutLogo.tsx  UpdateBanner.tsx
src/config/: agentBehaviorDefaults.ts  llmNetworkDefaults.ts  modelContextDefaults.ts  modelVisionHeuristics.ts  preAuthFlow.ts  runtimeTimeoutDefaults.ts
src/constants/: codeScoutGallery.ts  demoActivityChart.ts  waitlistConsent.ts
src/hooks/: useAgentRoleCatalog.ts  (+1 more)
tests/: prompt-harness.mjs
waitlist-api/: package-lock.json  package.json  server.mjs
(+141 files in other folders)
