[package]
name = "app"
version = "0.1.36"
description = "Code Scout — AI coding assistant"
authors = ["Code Scout"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
dirs = "5"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log    = "2"
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2.5"
tauri-plugin-dialog = "2.7"
if-addrs = "0.15.0"
